--- a/.github/workflows/build-linux-artifact.yml
+++ b/.github/workflows/build-linux-artifact.yml
@@ -38,14 +38,16 @@ jobs:
           repository: "godotengine/godot"
           path: "godot"
           ref: ${{ inputs.godot_tag }}
-      # Checkout current source of GodotSteam
-      - name: Checkout GodotSteam
+
+      # Checkout current source of GodotSteam Server
+      - name: Checkout GodotSteam Server
         uses: actions/checkout@v3
         with:
-          path: "godotsteam"
-      - name: Copy GodotSteam Module
+          path: "godotsteam_server"
+      - name: Copy GodotSteam Server Module
         run: |
-          cp -r godotsteam godot/modules/godotsteam
+          cp -r godotsteam_server godot/modules/godotsteam_server
+
       # Checkout Steamworks SDK
       - name: Checkout Steamworks SDK
         uses: actions/checkout@v3
@@ -56,9 +58,11 @@ jobs:
           ref: ${{ inputs.steamworks_sdk_tag }}
       - name: Copy Steamworks
         run: |
-          mkdir godot/modules/godotsteam/sdk/public
-          cp -r steamworks/public godot/modules/godotsteam/sdk
-          cp -r steamworks/redistributable_bin godot/modules/godotsteam/sdk
+          mkdir godot/modules/godotsteam_server/sdk/public
+          cp -r steamworks/public godot/modules/godotsteam_server/sdk
+          cp -r steamworks/redistributable_bin godot/modules/godotsteam_server/sdk
+
+      # Build the server module
       - name: Build Linux Binary
         working-directory: "godot"
         run: |
@@ -74,5 +78,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: linux-libsteam-api-so
-          path: godot/modules/godotsteam/sdk/redistributable_bin/linux64/libsteam_api.so
+          path: godot/modules/godotsteam_server/sdk/redistributable_bin/linux64/libsteam_api.so
           retention-days: 1
