--- a/.github/workflows/build-releases.yml
+++ b/.github/workflows/build-releases.yml
@@ -7,17 +7,17 @@ on:
         description: 'Steamworks SDK Github tag:'
         required: true
         type: string
-        default: 'sdk-1.57'
+        default: 'sdk-1.58'
       godot_tag:
         description: 'Godot Github tag:'
         required: true
         type: string
         default: '4.1.1-stable'
       godotsteam_version:
-        description: 'GodotSteam version number:'
+        description: 'GodotSteam Server version number:'
         required: true
         type: string
-        default: '4.2.2'
+        default: '4.0'
 
 jobs:
   env-setup:
