--- a/.github/workflows/build-windows-artifact.yml
+++ b/.github/workflows/build-windows-artifact.yml
@@ -38,17 +38,19 @@ jobs:
           repository: "godotengine/godot"
           path: "godot"
           ref: ${{ inputs.godot_tag }}
-      # Checkout current source of GodotSteam
-      - name: Checkout GodotSteam
+
+      # Checkout current source of GodotSteam Server
+      - name: Checkout GodotSteam Server
         uses: actions/checkout@v3
         with:
-          path: "godotsteam"
-      - name: Copy GodotSteam Module
+          path: "godotsteam_server"
+      - name: Copy GodotSteam Server Module
         run: |
           dir
-          robocopy godotsteam godot/modules/godotsteam /e
-          cd godot/modules/godotsteam && dir
+          robocopy godotsteam_server godot/modules/godotsteam_server /e
+          cd godot/modules/godotsteam_server && dir
           EXIT 0
+
       # Checkout Steamworks SDK
       - name: Checkout Steamworks SDK
         uses: actions/checkout@v3
@@ -59,14 +61,17 @@ jobs:
           ref: ${{ inputs.steamworks_sdk_tag }}
       - name: Copy Steamworks
         run: |
-          robocopy steamworks/public/steam godot/modules/godotsteam/sdk/public/steam /e
-          robocopy steamworks/redistributable_bin godot/modules/godotsteam/sdk/redistributable_bin /e
-          cd godot/modules/godotsteam/sdk && dir
+          robocopy steamworks/public/steam godot/modules/godotsteam_server/sdk/public/steam /e
+          robocopy steamworks/redistributable_bin godot/modules/godotsteam_server/sdk/redistributable_bin /e
+          cd godot/modules/godotsteam_server/sdk && dir
           EXIT 0
+
+      # Install build requirements
       - name: Install Build Requirements
         run: |
           python -m pip install scons==4.4.0
           
+      # Compile the server module
       - name: Build Windows
         working-directory: "godot"
         run: |
@@ -83,5 +88,5 @@ jobs:
         with:
           name: win_steam_api_64
           path: |
-            godot/modules/godotsteam/sdk/redistributable_bin/win64/steam_api64.dll
+            godot/modules/godotsteam_server/sdk/redistributable_bin/win64/steam_api64.dll
           retention-days: 1
