--- a/.github/workflows/build-linux-artifact.yml
+++ b/.github/workflows/build-linux-artifact.yml
@@ -25,6 +25,8 @@ on:
       steamworks_sdk_repo_token:
         required: true
 
+env:
+ base_branch: godot3
 
 jobs:
   build-linux:
@@ -62,9 +64,47 @@ jobs:
           cp -r steamworks/public godot/modules/godotsteam_server/sdk
           cp -r steamworks/redistributable_bin godot/modules/godotsteam_server/sdk
 
+      # Install buildroot and dev tools
+      - name: Install buildroot x86_64
+        shell: sh
+        run: |
+          sudo apt-get update
+          sudo apt-get install yasm
+          cd /opt
+          curl -LO https://downloads.tuxfamily.org/godotengine/toolchains/linux/2021-02-11/x86_64-godot-linux-gnu_sdk-buildroot.tar.bz2
+          tar xf x86_64-godot-linux-gnu_sdk-buildroot.tar.bz2
+          rm -f x86_64-godot-linux-gnu_sdk-buildroot.tar.bz2
+          mv x86_64-godot-linux-gnu_sdk-buildroot buildroot
+          cd buildroot
+          ./relocate-sdk.sh
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+
+      - name: Set up SCons
+        shell: bash
+        run: |
+          python -c "import sys; print(sys.version)"
+          python -m pip install scons
+          scons --version
+      
+      - name: Load .scons_cache directory
+        id: godot-extension-cache
+        uses: actions/cache@v2
+        with:
+          path: ${{github.workspace}}/.scons_cache/
+          key: ${{github.job}}-${{env.base_branch}}-${{github.ref}}-${{github.sha}}
+          restore-keys: |
+            ${{github.job}}-${{env.base_branch}}-${{github.ref}}-${{github.sha}}
+            ${{github.job}}-${{env.base_branch}}-${{github.ref}}
+            ${{github.job}}-${{env.base_branch}}-${{env.base_branch}}
+
       # Build the module and make it available
       - name: Build Linux Editor
         working-directory: "godot"
+        env:
+          SCONS_CACHE: ${{github.workspace}}/.scons_cache/
+          SCONS_CACHE_LIMIT: 7168
         run: |
           PATH=/opt/x86_64-godot-linux-gnu_sdk-buildroot/bin:$PATH scons ${{ inputs.build_params }}
           mv bin/${{ inputs.binary_name }} bin/${{ inputs.export_name }}
