--- a/.github/workflows/build-releases.yml
+++ b/.github/workflows/build-releases.yml
@@ -36,7 +36,7 @@ jobs:
           gsver=${{ inputs.godotsteam_version }}
           gtag=${{ inputs.godot_tag }}
           gtag=${gtag//[.]/}
-          tag=g${gtag%-*}-s${sdktag:0-3}-gs${gsver//[.]/}
+          tag=g${gtag%-*}-s${sdktag:0-3}-gss${gsver//[.]/}
           echo "zip_tag=${tag}" >> $GITHUB_OUTPUT
       - name: set_release_title
         id: set_release_title
@@ -54,84 +54,85 @@ jobs:
           echo "godot_version=${gv}" >> $GITHUB_OUTPUT
 
 ################# Linux 64 Builds #################
-
-  build-linux-editor:
-    needs: [env-setup]
-    uses: ./.github/workflows/build-linux-artifact.yml
-    with:
-      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
-      godot_tag: ${{ inputs.godot_tag }}
-      binary_name: "godot.x11.opt.tools.64"
-      export_name: "linux-${{ needs.env-setup.outputs.godot_version }}-editor.64"
-      build_params: "-j4 platform=x11 production=yes tools=yes target=release_debug bits=64 warnings=extra"
-      artifact_name: "linux-editor"
-    secrets:
-      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
-      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}
-
-  build-linux-release-template:
-    needs: [env-setup]
-    uses: ./.github/workflows/build-linux-artifact.yml
-    with:
-      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
-      godot_tag: ${{ inputs.godot_tag }}
-      binary_name: "godot.x11.opt.64"
-      export_name: "linux-${{ needs.env-setup.outputs.godot_version }}-template.64"
-      build_params: "-j4 platform=x11 production=yes tools=no target=release bits=64 warnings=extra"
-      artifact_name: "linux-release-template"
-    secrets:
-      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
-      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}
-
-  build-linux-debug-template:
-    needs: [env-setup]
-    uses: ./.github/workflows/build-linux-artifact.yml
-    with:
-      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
-      godot_tag: ${{ inputs.godot_tag }}
-      binary_name: "godot.x11.opt.debug.64"
-      export_name: "linux-${{ needs.env-setup.outputs.godot_version }}-debug-template.64"
-      build_params: "-j4 platform=x11 production=yes tools=no target=release_debug bits=64 warnings=extra"
-      artifact_name: "linux-debug-template"
-    secrets:
-      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
-      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}
-
-  create-linux-bundle:
-    needs: [env-setup, build-linux-editor, build-linux-release-template, build-linux-debug-template]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Linux Editor
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-editor
-          path: files
-      - name: Download Linux Release Template
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-release-template
-          path: files
-      - name: Download Linux Debug Template
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-debug-template
-          path: files
-      - name: Download Linux Steam API
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-libsteam-api-so
-          path: files
-      - name: Create Linux Bundle
-        run: |
-          echo "480" >> files/steam_appid.txt
-          zip -j linux64-${{ needs.env-setup.outputs.zip_tag }}.zip files/*
-      - name: Upload Win64 bundle artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: linux64-${{ needs.env-setup.outputs.zip_tag }}.zip
-          path: linux64-${{ needs.env-setup.outputs.zip_tag }}.zip
-          if-no-files-found: error
-          retention-days: 1
+#  Commented out for now until custom runners are set up
+#
+#  build-linux-editor:
+#    needs: [env-setup]
+#    uses: ./.github/workflows/build-linux-artifact.yml
+#    with:
+#      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
+#      godot_tag: ${{ inputs.godot_tag }}
+#      binary_name: "godot.x11.opt.tools.64"
+#      export_name: "linux-server-${{ needs.env-setup.outputs.godot_version }}-editor.64"
+#      build_params: "-j4 platform=x11 production=yes tools=yes target=release_debug bits=64 warnings=extra"
+#      artifact_name: "linux-editor"
+#    secrets:
+#      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
+#      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}
+#
+#  build-linux-release-template:
+#    needs: [env-setup]
+#    uses: ./.github/workflows/build-linux-artifact.yml
+#    with:
+#      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
+#      godot_tag: ${{ inputs.godot_tag }}
+#      binary_name: "godot.x11.opt.64"
+#      export_name: "linux-server-${{ needs.env-setup.outputs.godot_version }}-template.64"
+#      build_params: "-j4 platform=x11 production=yes tools=no target=release bits=64 warnings=extra"
+#      artifact_name: "linux-release-template"
+#    secrets:
+#      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
+#      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}
+#
+#  build-linux-debug-template:
+#    needs: [env-setup]
+#    uses: ./.github/workflows/build-linux-artifact.yml
+#    with:
+#      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
+#      godot_tag: ${{ inputs.godot_tag }}
+#      binary_name: "godot.x11.opt.debug.64"
+#      export_name: "linux-server-${{ needs.env-setup.outputs.godot_version }}-debug-template.64"
+#      build_params: "-j4 platform=x11 production=yes tools=no target=release_debug bits=64 warnings=extra"
+#      artifact_name: "linux-debug-template"
+#    secrets:
+#      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
+#      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}#
+#
+#  create-linux-bundle:
+#    needs: [env-setup, build-linux-editor, build-linux-release-template, build-linux-debug-template]
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Download Linux Editor
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: linux-editor
+#          path: files
+#      - name: Download Linux Release Template
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: linux-release-template
+#          path: files
+#      - name: Download Linux Debug Template
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: linux-debug-template
+#          path: files
+#      - name: Download Linux Steam API
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: linux-libsteam-api-so
+#          path: files
+#      - name: Create Linux Bundle
+#        run: |
+#          echo "480" >> files/steam_appid.txt
+#          zip -j linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip files/*
+#      - name: Upload Win64 bundle artifact
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip
+#          path: linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip
+#          if-no-files-found: error
+#          retention-days: 1
 
 ################# Win64 Builds #################
   
@@ -142,7 +143,7 @@ jobs:
       steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
       godot_tag: ${{ inputs.godot_tag }}
       binary_name: godot.windows.opt.tools.64.exe
-      export_name: "windows-${{ needs.env-setup.outputs.godot_version }}-editor-64bit.exe"
+      export_name: "windows-server-${{ needs.env-setup.outputs.godot_version }}-editor-64bit.exe"
       build_params: "-j4 platform=windows production=yes tools=yes target=release_debug debug_symbols=no warnings=extra"
       artifact_name: "win64-editor"
     secrets:
@@ -156,7 +157,7 @@ jobs:
       steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
       godot_tag: ${{ inputs.godot_tag }}
       binary_name: godot.windows.opt.64.exe
-      export_name: "windows-${{ needs.env-setup.outputs.godot_version }}-template-64bit.exe"
+      export_name: "windows-server-${{ needs.env-setup.outputs.godot_version }}-template-64bit.exe"
       build_params: "-j4 platform=windows production=yes tools=no target=release debug_symbols=no warnings=extra"
       artifact_name: "win64-release-template"
     secrets:
@@ -170,7 +171,7 @@ jobs:
       steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
       godot_tag: ${{ inputs.godot_tag }}
       binary_name: godot.windows.opt.debug.64.exe
-      export_name: "windows-${{ needs.env-setup.outputs.godot_version }}-debug-template-64bit.exe"
+      export_name: "windows-server-${{ needs.env-setup.outputs.godot_version }}-debug-template-64bit.exe"
       build_params: "-j4 platform=windows production=yes tools=no target=release_debug debug_symbols=no warnings=extra"
       artifact_name: "win64-debug-template"
     secrets:
@@ -204,12 +205,12 @@ jobs:
       - name: Create Windows Bundle
         run: |
           echo "480" >> files/steam_appid.txt
-          zip -j win64-${{ needs.env-setup.outputs.zip_tag }}.zip files/*
+          zip -j win64-server-${{ needs.env-setup.outputs.zip_tag }}.zip files/*
       - name: Upload Win64 bundle artifact
         uses: actions/upload-artifact@v3
         with:
-          name: win64-${{ needs.env-setup.outputs.zip_tag }}.zip
-          path: win64-${{ needs.env-setup.outputs.zip_tag }}.zip
+          name: win64-server-${{ needs.env-setup.outputs.zip_tag }}.zip
+          path: win64-server-${{ needs.env-setup.outputs.zip_tag }}.zip
           if-no-files-found: error
           retention-days: 1
 
@@ -357,13 +358,13 @@ jobs:
           chmod +x files/osx_template.app/Contents/MacOS/godot_osx*
           pushd files
           zip -r ./macos.zip ./osx_template.app
-          zip -r ../macos-${{ needs.env-setup.outputs.zip_tag }}.zip ./macos.zip ./GodotEditor.app
+          zip -r ../macos-server-${{ needs.env-setup.outputs.zip_tag }}.zip ./macos.zip ./GodotEditor.app
           popd
       - name: Upload MacOS bundle artifact
         uses: actions/upload-artifact@v3
         with:
-          name: macos-${{ needs.env-setup.outputs.zip_tag }}.zip
-          path: macos-${{ needs.env-setup.outputs.zip_tag }}.zip
+          name: macos-server-${{ needs.env-setup.outputs.zip_tag }}.zip
+          path: macos-server-${{ needs.env-setup.outputs.zip_tag }}.zip
           if-no-files-found: error
           retention-days: 1
 
@@ -387,21 +388,21 @@ jobs:
         with:
           name: win_steam_api_64
           path: files
-      - name: Download Linux Release Template
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-release-template
-          path: files
-      - name: Download Linux Debug Template
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-debug-template
-          path: files
-      - name: Download Linux Steam API
-        uses: actions/download-artifact@v3
-        with:
-          name: linux-libsteam-api-so
-          path: files
+#      - name: Download Linux Release Template
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: linux-release-template
+#          path: files
+#      - name: Download Linux Debug Template
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: linux-debug-template
+#          path: files
+#      - name: Download Linux Steam API
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: linux-libsteam-api-so
+#          path: files
       - name: Download MacOS x86_64 Release Template
         uses: actions/download-artifact@v3
         with:
@@ -448,11 +449,11 @@ jobs:
           zip -r ./macos.zip ./osx_template.app
           popd
           rm -r files/osx_template.app/
-          zip -j godotsteam-${{ needs.env-setup.outputs.zip_tag }}-templates.zip files/*
+          zip -j godotsteam-server-${{ needs.env-setup.outputs.zip_tag }}-templates.zip files/*
       - name: Upload template bundle artifact
         uses: actions/upload-artifact@v3
         with:
-          name: godotsteam-${{ needs.env-setup.outputs.zip_tag }}-templates.zip
-          path: godotsteam-${{ needs.env-setup.outputs.zip_tag }}-templates.zip
+          name: godotsteam-server-${{ needs.env-setup.outputs.zip_tag }}-templates.zip
+          path: godotsteam-server-${{ needs.env-setup.outputs.zip_tag }}-templates.zip
           if-no-files-found: error
           retention-days: 1
