--- a/.github/workflows/build-macos-artifact.yml
+++ b/.github/workflows/build-macos-artifact.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
       # Checkout Godot
       - name: Checkout Godot
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: "godotengine/godot"
           path: "godot"
@@ -38,7 +38,7 @@ jobs:
 
       # Checkout current source of GodotSteam Server
       - name: Checkout GodotSteam Server
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           path: "godotsteam_server"
       - name: Copy GodotSteam Server Module
@@ -47,7 +47,7 @@ jobs:
 
       # Checkout Steamworks SDK
       - name: Checkout Steamworks SDK
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           path: "steamworks"
           repository: ${{ secrets.steamworks_sdk_repo }}
@@ -58,26 +58,6 @@ jobs:
           cp -r steamworks/public godot/modules/godotsteam_server/sdk
           cp -r steamworks/redistributable_bin godot/modules/godotsteam_server/sdk
           ls -la godot/modules/godotsteam_server/sdk
-
-      # Install the Vulkan SDK, script copied from the official Godot build scripts.
-      - name: Install Vulkan SDK
-        run: |
-          set -euo pipefail
-          IFS=$'\n\t'
-          # Download and install the Vulkan SDK.
-          curl -L "https://sdk.lunarg.com/sdk/download/latest/mac/vulkan-sdk.dmg" -o /tmp/vulkan-sdk.dmg
-          hdiutil attach /tmp/vulkan-sdk.dmg -mountpoint /Volumes/vulkan-sdk
-          /Volumes/vulkan-sdk/InstallVulkan.app/Contents/MacOS/InstallVulkan \
-              --accept-licenses --default-answer --confirm-command install
-          cnt=5
-          until hdiutil detach -force /Volumes/vulkan-sdk
-          do
-             [[ cnt -eq "0" ]] && break
-             sleep 1
-             ((cnt--))
-          done
-          rm -f /tmp/vulkan-sdk.dmg
-          echo 'Vulkan SDK installed successfully!'
       - name: Install Build Tools
         run: |
           brew install scons yasm
@@ -88,14 +68,14 @@ jobs:
         run: |
           scons ${{ inputs.build_params }}
       - name: Upload MacOS Build
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.artifact_name }}
           path: godot/bin/${{ inputs.export_name }}
           if-no-files-found: error
           retention-days: 1
       - name: Upload MacOS Steam Dylib
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: macos-libsteam-api-dylib
           path: godot/modules/godotsteam_server/sdk/redistributable_bin/osx/libsteam_api.dylib
@@ -108,16 +88,18 @@ jobs:
           zip -r ./osx_template.zip ./osx_template.app/
           popd
       - name: Upload MacOS Tool App
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: macos-tool-app
           path: godot/misc/dist/osx_tools.zip
           if-no-files-found: error
+          overwrite: true
           retention-days: 1
       - name: Upload MacOS Template App
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: macos-template-app
           path: godot/misc/dist/osx_template.zip
           if-no-files-found: error
+          overwrite: true
           retention-days: 1
