--- a/.github/workflows/build-releases.yml
+++ b/.github/workflows/build-releases.yml
@@ -17,7 +17,7 @@ on:
         description: 'GodotSteam Server version number:'
         required: true
         type: string
-        default: '3.0'
+        default: '3.1'
 
 jobs:
   env-setup:
@@ -102,22 +102,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download Linux Editor
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: linux-editor
           path: files
       - name: Download Linux Release Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: linux-release-template
           path: files
       - name: Download Linux Debug Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: linux-debug-template
           path: files
       - name: Download Linux Steam API
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: linux-libsteam-api-so
           path: files
@@ -126,7 +126,87 @@ jobs:
           echo "480" >> files/steam_appid.txt
           zip -j linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip files/*
       - name: Upload Win64 bundle artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip
+          path: linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip
+          if-no-files-found: error
+          retention-days: 1
+
+################# Linux 64 Server / Headless Builds #################
+
+  build-linux-headless-editor:
+    needs: [env-setup]
+    uses: ./.github/workflows/build-server-artifact.yml
+    with:
+      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
+      godot_tag: ${{ inputs.godot_tag }}
+      binary_name: "godot_server.x11.opt.tools.64"
+      export_name: "linux-server-headless-${{ needs.env-setup.outputs.godot_version }}-editor.64"
+      build_params: "-j4 platform=server production=yes tools=yes target=release_debug bits=64 warnings=extra"
+      artifact_name: "linux-editor"
+    secrets:
+      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
+      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}
+
+  build-linux-headless-release-template:
+    needs: [env-setup]
+    uses: ./.github/workflows/build-server-artifact.yml
+    with:
+      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
+      godot_tag: ${{ inputs.godot_tag }}
+      binary_name: "godot_server.x11.opt.64"
+      export_name: "linux-server-headless-${{ needs.env-setup.outputs.godot_version }}-template.64"
+      build_params: "-j4 platform=server production=yes tools=no target=release bits=64 warnings=extra"
+      artifact_name: "linux-release-template"
+    secrets:
+      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
+      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}
+
+  build-linux-headless-debug-template:
+    needs: [env-setup]
+    uses: ./.github/workflows/build-server-artifact.yml
+    with:
+      steamworks_sdk_tag: ${{ inputs.steamworks_sdk_tag }}
+      godot_tag: ${{ inputs.godot_tag }}
+      binary_name: "godot_server.x11.opt.debug.64"
+      export_name: "linux-server-headless-${{ needs.env-setup.outputs.godot_version }}-debug-template.64"
+      build_params: "-j4 platform=server production=yes tools=no target=release_debug bits=64 warnings=extra"
+      artifact_name: "linux-debug-template"
+    secrets:
+      steamworks_sdk_repo: ${{ secrets.STEAMWORKS_SDK_REPO }}
+      steamworks_sdk_repo_token: ${{ secrets.STEAMWORKS_SDK_REPO_TOKEN }}#
+
+  create-linux-bundle:
+    needs: [env-setup, build-linux-headless-editor, build-linux-headless-release-template, build-linux-headless-debug-template]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Linux Editor
+        uses: actions/download-artifact@v4
+        with:
+          name: linux-headless-editor
+          path: files
+      - name: Download Linux Release Template
+        uses: actions/download-artifact@v4
+        with:
+          name: linux-headless-release-template
+          path: files
+      - name: Download Linux Debug Template
+        uses: actions/download-artifact@v4
+        with:
+          name: linux-headless-debug-template
+          path: files
+      - name: Download Linux Steam API
+        uses: actions/download-artifact@v4
+        with:
+          name: linux-libsteam-api-so
+          path: files
+      - name: Create Linux Bundle
+        run: |
+          echo "480" >> files/steam_appid.txt
+          zip -j linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip files/*
+      - name: Upload Win64 bundle artifact
+        uses: actions/upload-artifact@v4
         with:
           name: linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip
           path: linux64-server-${{ needs.env-setup.outputs.zip_tag }}.zip
@@ -182,22 +262,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download Windows Editor
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: win64-editor
           path: files
       - name: Download Windows Release Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: win64-release-template
           path: files
       - name: Download Windows Debug Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: win64-debug-template
           path: files
       - name: Download Windows 64 Bit Steam API
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: win_steam_api_64
           path: files
@@ -206,7 +286,7 @@ jobs:
           echo "480" >> files/steam_appid.txt
           zip -j win64-server-${{ needs.env-setup.outputs.zip_tag }}.zip files/*
       - name: Upload Win64 bundle artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: win64-server-${{ needs.env-setup.outputs.zip_tag }}.zip
           path: win64-server-${{ needs.env-setup.outputs.zip_tag }}.zip
@@ -292,47 +372,47 @@ jobs:
     runs-on: macos-latest
     steps:
       - name: Download MacOS x86_64 Editor
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-editor-x86_64
           path: files
       - name: Download MacOS ARM Editor
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-editor-arm64
           path: files
       - name: Download MacOS x86_64 Release Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-release-template-x86_64
           path: files
       - name: Download MacOS x86_64 Debug Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-debug-template-x86_64
           path: files
       - name: Download MacOS ARM Release Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-release-template-arm64
           path: files
       - name: Download MacOS ARM Debug Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-debug-template-arm64
           path: files
       - name: Download MacOS Steam API
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-libsteam-api-dylib
           path: files
       - name: Download MacOS Tool App
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-tool-app
           path: files
       - name: Download MacOS Template App
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-template-app
           path: files
@@ -360,7 +440,7 @@ jobs:
           zip -r ../macos-server-${{ needs.env-setup.outputs.zip_tag }}.zip ./macos.zip ./GodotEditor.app
           popd
       - name: Upload MacOS bundle artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: macos-server-${{ needs.env-setup.outputs.zip_tag }}.zip
           path: macos-server-${{ needs.env-setup.outputs.zip_tag }}.zip
@@ -373,62 +453,62 @@ jobs:
     runs-on: macos-latest
     steps:
       - name: Download Windows 64 Bit Release Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: win64-release-template
           path: files
       - name: Download Windows 64 Bit Debug Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: win64-debug-template
           path: files
       - name: Download Windows 64 Bit Steam API
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: win_steam_api_64
           path: files
       - name: Download Linux Release Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: linux-release-template
           path: files
       - name: Download Linux Debug Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: linux-debug-template
           path: files
       - name: Download Linux Steam API
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: linux-libsteam-api-so
           path: files
       - name: Download MacOS x86_64 Release Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-release-template-x86_64
           path: files
       - name: Download MacOS x86_64 Debug Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-debug-template-x86_64
           path: files
       - name: Download MacOS ARM Release Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-release-template-arm64
           path: files
       - name: Download MacOS ARM Debug Template
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-debug-template-arm64
           path: files
       - name: Download MacOS Steam API
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-libsteam-api-dylib
           path: files
       - name: Download MacOS Template App
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: macos-template-app
           path: files
@@ -450,7 +530,7 @@ jobs:
           rm -r files/osx_template.app/
           zip -j godotsteam-server-${{ needs.env-setup.outputs.zip_tag }}-templates.zip files/*
       - name: Upload template bundle artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: godotsteam-server-${{ needs.env-setup.outputs.zip_tag }}-templates.zip
           path: godotsteam-server-${{ needs.env-setup.outputs.zip_tag }}-templates.zip
